--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1370,7 +1370,7 @@ table td:first-child {
   display: inline-block;
   border: 1px solid var(--color-gray-400);
   border-radius: var(--radius-main);
-  padding: 5px 2.1875rem 4px 10px;
+  padding: 5px 1.875rem 4px 10px;
   width: 100%;
   line-height: 1.66;
 }
@@ -1563,8 +1563,11 @@ table td:first-child {
   font-size: var(--size-m);
   line-height: 1.8;
   text-align: center;
+  color: var(--color-gray-400);
 }
 .tabs-link-active {
+  font-weight: 500;
+  color: var(--color-dark);
   background-color: var(--color-white);
 }
 .tabs-link::first-letter {
