--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,13 +1,4 @@
 @import "./vendor/normalize";
-
-// styles for modal window
 @import "../../node_modules/graph-modal/dist/graph-modal.min";
-
-// стили для табов
-// @import "../../node_modules/graph-tabs/dist/graph-tabs.min"
-
-// стили для библиотеки aos
-// @import "../../node_modules/aos/dist/aos";
-
-// стили для свайпера
+@import "../../node_modules/croppie/croppie";
 @import "../../node_modules/swiper/swiper-bundle.min";
