--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1459,7 +1459,15 @@ table td:first-child {
 }
 
 .radio {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: 10px clamp(15px, 1.25rem, 20px);
   line-height: 1;
   text-align: center;
