--- a/app/css/main.css
+++ b/app/css/main.css
@@ -302,7 +302,7 @@
   min-height: 100%;
   font-size: 16px;
 }
-@media (min-width: 120.0625em) {
+@media (min-width: 120em) {
   .page {
     font-size: 16px;
   }
@@ -368,7 +368,7 @@
 
 .main {
   position: relative;
-  padding: clamp(20px, 2.5rem, 40px) 0;
+  padding: clamp(20px, 2.3125rem, 40px) 0;
 }
 @media (max-width: calc(29.6875em - 0.0625em)) {
   .main .container {
@@ -383,11 +383,11 @@
 .inner {
   position: relative;
   padding: clamp(0.5em, 2.5rem, 40px);
-  padding-bottom: clamp(0.5em, 1.75rem, 40px);
+  padding-bottom: clamp(0.5em, 2rem, 40px);
   background-color: var(--color-white);
 }
 .inner:not(:last-child) {
-  margin-bottom: clamp(30px, 2.5rem, 50px);
+  margin-bottom: clamp(25px, 1.875rem, 50px);
 }
 @media (max-width: calc(48em - 0.0625em)) {
   .inner {
@@ -583,6 +583,17 @@ table td:first-child {
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -618,13 +629,19 @@ table td:first-child {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-right: 4.375rem;
+  margin-right: 6.875rem;
   height: 20px;
-  max-width: 142px;
+  min-width: 142px;
 }
 @media (max-width: calc(48em - 0.0625em)) {
   .logo-img {
     height: 14px;
+  }
+}
+@media (max-width: calc(80em - 0.0625em)) {
+  .logo {
+    margin-right: 1.25rem;
+    min-width: 120px;
   }
 }
 @media (max-width: calc(62em - 0.0625em)) {
@@ -640,9 +657,9 @@ table td:first-child {
 
 .nav {
   width: 100%;
-  -webkit-transform: translateX(-50px);
-  -ms-transform: translateX(-50px);
-  transform: translateX(-50px);
+  -webkit-transform: translateX(-60px);
+  -ms-transform: translateX(-60px);
+  transform: translateX(-60px);
 }
 .nav-list {
   display: -webkit-box;
@@ -655,6 +672,13 @@ table td:first-child {
   -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
+}
+@media (max-width: calc(62em - 0.0625em)) {
+  .nav-list {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
 }
 @media (max-width: calc(48em - 0.0625em)) {
   .nav-list {
@@ -671,7 +695,7 @@ table td:first-child {
   }
 }
 .nav-item:not(.nav-item-search) {
-  margin-right: clamp(25px, 2.5rem, 45px);
+  margin-right: clamp(25px, 2.6875rem, 45px);
 }
 @media (max-width: calc(48em - 0.0625em)) {
   .nav-item:not(.nav-item-search) {
@@ -690,13 +714,14 @@ table td:first-child {
   top: -1px;
   height: 100%;
 }
+@media (max-width: calc(80em - 0.0625em)) {
+  .nav-item-search {
+    max-width: 220px;
+  }
+}
 @media (max-width: calc(62em - 0.0625em)) {
   .nav-item-search {
     width: calc(25px + 10 * ((100vw - 320px) / 1600));
-  }
-}
-@media (max-width: calc(48em - 0.0625em)) {
-  .nav-item-search {
     display: none;
   }
 }
@@ -845,14 +870,17 @@ table td:first-child {
     margin-right: 0;
   }
 }
+.action-item .btn {
+  height: calc(30px + 3 * ((100vw - 320px) / 1600));
+}
 @media (max-width: calc(48em - 0.0625em)) {
   .action-item.avatar {
     display: none;
   }
 }
 .action-notifications {
-  width: calc(25px + 10 * ((100vw - 320px) / 1600));
-  height: calc(25px + 10 * ((100vw - 320px) / 1600));
+  width: calc(30px + 3 * ((100vw - 320px) / 1600));
+  height: calc(30px + 3 * ((100vw - 320px) / 1600));
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -979,12 +1007,12 @@ table td:first-child {
   font-size: var(--size-sl);
 }
 .avatar-small {
-  max-width: calc(30px + 5 * ((100vw - 320px) / 1600));
-  height: calc(30px + 5 * ((100vw - 320px) / 1600));
+  max-width: calc(30px + 3 * ((100vw - 320px) / 1600));
+  height: calc(30px + 3 * ((100vw - 320px) / 1600));
 }
 .avatar-small .avatar-text {
-  width: calc(30px + 5 * ((100vw - 320px) / 1600));
-  height: calc(30px + 5 * ((100vw - 320px) / 1600));
+  width: calc(30px + 3 * ((100vw - 320px) / 1600));
+  height: calc(30px + 3 * ((100vw - 320px) / 1600));
   font-size: var(--size-s);
 }
 .avatar-text {
@@ -1127,6 +1155,9 @@ table td:first-child {
 .content-offer {
   padding: 0 1.5625rem;
 }
+.content-list.content {
+  margin-bottom: 18px;
+}
 
 .publish-form-open .publish-action {
   padding-top: clamp(10px, 0.9375rem, 20px);
@@ -1149,6 +1180,7 @@ table td:first-child {
 }
 .publish-input {
   display: block;
+  overflow-y: auto;
   padding: 12px 1.25rem;
   min-height: 39px;
   max-height: 94px;
@@ -1372,6 +1404,7 @@ table td:first-child {
   border-radius: var(--radius-main);
   padding: 5px 1.875rem 4px 10px;
   width: 100%;
+  min-width: 85px;
   line-height: 1.66;
 }
 .publish-dropdown-btn::before {
@@ -1468,7 +1501,7 @@ table td:first-child {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 10px clamp(15px, 1.25rem, 20px);
+  padding: 10px clamp(15px, 1.375rem, 25px);
   line-height: 1;
   text-align: center;
   cursor: pointer;
@@ -1757,7 +1790,7 @@ table td:first-child {
   margin-right: 1.25rem;
 }
 .tabs-action-item .btn {
-  padding: 10px 0;
+  padding: 8px 0;
   line-height: 1;
 }
 .tabs-action-radio {
@@ -1796,12 +1829,10 @@ table td:first-child {
   padding-left: 10px;
 }
 .tabs-action .btn-currency .btn-icon {
-  margin-right: clamp(0.2em, 0.8125rem, 15px);
+  margin-right: clamp(0.2em, 0.75rem, 15px);
   width: 100%;
-  height: 10px;
+  height: 9px;
   max-width: 18px;
-  fill: none;
-  stroke: var(--color-gray-300);
   -webkit-transform: translateY(1px);
   -ms-transform: translateY(1px);
   transform: translateY(1px);
@@ -1811,12 +1842,13 @@ table td:first-child {
   padding-left: 12px;
 }
 .tabs-action .btn-data .btn-icon {
-  margin-right: clamp(0.2em, 0.9375rem, 15px);
+  margin-right: clamp(0.2em, 0.875rem, 15px);
   width: 100%;
-  height: 14px;
+  height: 15px;
   max-width: 14px;
-  fill: none;
-  stroke: var(--color-gray-300);
+  -webkit-transform: translateY(-1px);
+  -ms-transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 .tabs-copy .btn {
   display: inline-block;
@@ -1836,10 +1868,8 @@ table td:first-child {
 .tabs-copy .tabs-icon {
   margin-left: clamp(0.2em, 0.8125rem, 15px);
   width: 100%;
-  height: 10px;
+  height: auto;
   max-width: 18px;
-  fill: none;
-  stroke: var(--color-gray-300);
   -webkit-transform: translateY(1px);
   -ms-transform: translateY(1px);
   transform: translateY(1px);
@@ -2534,6 +2564,26 @@ table td:first-child {
   padding: 0;
   max-width: 395px;
 }
+.graph-modal__container--cropp {
+  max-width: 920px;
+}
+.graph-modal__container--cropp .graph-modal-top {
+  border-bottom-color: transparent;
+}
+.graph-modal__container--cropp .graph-modal-btns {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+.graph-modal__container--cropp .graph-modal-btn {
+  margin: 0;
+  max-width: 103px;
+  font-size: var(--size-sl);
+}
+.graph-modal__container--cropp .graph-modal-btn.btn {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
 .graph-modal-close:not(.btn) {
   background-position: center;
   background-size: cover;
@@ -2561,6 +2611,25 @@ table td:first-child {
   justify-content: space-between;
   border-bottom: 1px solid var(--color-gray-300);
   padding: 22px 30px;
+}
+.graph-modal-cropp {
+  padding: 0 30px;
+}
+.graph-modal-cropp .cr-slider {
+  width: 100%;
+  max-width: 360px;
+}
+.graph-modal-cropp .cr-slider::before {
+  content: "-";
+  margin-right: 20px;
+  font-size: 20px;
+  color: var(--color-gray-400);
+}
+.graph-modal-cropp .cr-slider::after {
+  content: "+";
+  margin-left: 20px;
+  font-size: 20px;
+  color: var(--color-gray-400);
 }
 .graph-modal-inner {
   padding: 2.0625rem;
@@ -2779,7 +2848,7 @@ table td:first-child {
   justify-content: space-between;
   margin-bottom: clamp(0.5em, 1.5625rem, 30px);
   border-bottom: 1px solid var(--color-gray-300);
-  padding-bottom: clamp(0.5em, 2.1875rem, 40px);
+  padding-bottom: clamp(0.5em, 1.875rem, 40px);
 }
 .about-top .link-item-link {
   display: none;
@@ -2870,6 +2939,16 @@ table td:first-child {
     width: 100%;
   }
 }
+.about-btns-cost {
+  font-weight: 400;
+  font-size: var(--size-m);
+  line-height: 1.7;
+  color: var(--color-gray-800);
+}
+.about-btns-cost span {
+  font-weight: 500;
+  color: var(--color-dark-900);
+}
 .about-btns .btn {
   width: 103px;
 }
@@ -2905,10 +2984,10 @@ table td:first-child {
 }
 .about-content-inner {
   width: 100%;
-  max-width: 550px;
+  max-width: 553px;
 }
 .about-content-inner:first-child {
-  margin-right: clamp(1.2em, 4.875rem, 90px);
+  margin-right: clamp(1.2em, 5rem, 90px);
 }
 @media (max-width: calc(48em - 0.0625em)) {
   .about-content-inner:first-child {
@@ -2941,10 +3020,10 @@ table td:first-child {
   display: -ms-grid;
   display: grid;
   justify-items: center;
-  -ms-grid-columns: 1.2fr 1.8fr 2.2fr 2.1fr 1.3fr;
-  grid-template-columns: 1.2fr 1.8fr 2.2fr 2.1fr 1.3fr;
-  padding-top: clamp(30px, 3.4375rem, 50px);
-  padding-bottom: clamp(30px, 3.75rem, 50px);
+  -ms-grid-columns: 1.2fr 1.85fr 2.2fr 2.1fr 1.3fr;
+  grid-template-columns: 1.2fr 1.85fr 2.2fr 2.1fr 1.3fr;
+  padding-top: clamp(30px, 3.125rem, 50px);
+  padding-bottom: clamp(30px, 3.5625rem, 60px);
 }
 .data-item {
   position: relative;
@@ -3002,7 +3081,7 @@ table td:first-child {
   }
 }
 .data-title {
-  margin-bottom: 6px;
+  margin-bottom: 14px;
   font-size: var(--size-s);
   line-height: 1.35;
   color: var(--color-gray-400);
@@ -3010,7 +3089,7 @@ table td:first-child {
 .data-number {
   font-size: calc(15px + 6 * ((100vw - 320px) / 1600));
   font-weight: 500;
-  line-height: 1.7;
+  line-height: 1;
 }
 .data-copy {
   -ms-grid-columns: 1.5fr 2.6fr 2.6fr 2.6fr 1.7fr;
@@ -3456,8 +3535,24 @@ table td:first-child {
   height: 4px;
   max-width: 18px;
 }
-.post-btn-open .post-more {
-  fill: var(--color-dark-900);
+.post-btn::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  -webkit-mask-image: url("../img/sprite.svg#post-more");
+  mask-image: url("../img/sprite.svg#post-more");
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
+  mask-size: cover;
+  width: 15px;
+  height: 4px;
+  background-color: var(--color-gray-300);
+}
+.post-btn-open::before {
+  background-color: var(--color-dark-900);
 }
 .post-more {
   position: absolute;
@@ -3705,6 +3800,10 @@ table td:first-child {
 .personal-avatar {
   margin-right: clamp(20px, 1.875rem, 40px);
 }
+.personal-avatar .avatar-img {
+  height: 100%;
+  width: calc(50px + 20 * ((100vw - 320px) / 1600));
+}
 .personal-title {
   margin-bottom: clamp(30px, 2.5rem, 50px);
   border-bottom: 1px solid var(--color-gray-300);
@@ -3854,6 +3953,9 @@ table td:first-child {
   overflow-x: auto;
   text-align: left;
 }
+.management-table .post-dropdown {
+  z-index: 1;
+}
 .management-table th {
   padding: 0.9375rem;
   text-transform: capitalize;
@@ -3862,6 +3964,7 @@ table td:first-child {
   padding-left: 0;
 }
 .management-table td {
+  position: relative;
   padding: 0.9375rem;
 }
 .management-table td::first-letter {
