--- a/src/scss/components/parts/_nav.scss
+++ b/src/scss/components/parts/_nav.scss
@@ -1,11 +1,15 @@
 .nav {
   width: 100%;
-  transform: translateX(-50px);
+  transform: translateX(-60px);
 
   &-list {
     @include flex-all-sb;
 
     width: 100%;
+
+    @include for-width(-tablet) {
+      justify-content: flex-start;
+    }
 
     @include for-width(-mobile-l) {
       flex-direction: column;
@@ -16,7 +20,7 @@
 
   &-item {
     &:not(.nav-item-search) {
-      margin-right: clamp(25px, rem(40), 45px);
+      margin-right: clamp(25px, rem(43), 45px);
 
       @include for-width(-mobile-l) {
         margin-right: 0;
@@ -37,11 +41,13 @@
         height: 100%;
       }
 
-      @include for-width(-tablet) {
-        @include adaptive_size("width", 35, 25);
+      @include for-width(-desktop-med) {
+        max-width: 220px;
       }
 
-      @include for-width(-mobile-l) {
+      @include for-width(-tablet) {
+        @include adaptive_size("width", 35, 25);
+
         display: none;
       }
     }
