--- a/src/scss/components/parts/_publish.scss
+++ b/src/scss/components/parts/_publish.scss
@@ -21,6 +21,7 @@
 
   &-input {
     display: block;
+    overflow-y: auto;
     padding: 12px rem(20);
     min-height: 39px;
     max-height: 94px;
@@ -233,6 +234,7 @@
       border-radius: var(--radius-main);
       padding: 5px rem(30) 4px 10px;
       width: 100%;
+      min-width: 85px;
       line-height: 1.66;
 
       &::before {
