--- a/src/scss/components/parts/_tab.scss
+++ b/src/scss/components/parts/_tab.scss
@@ -167,7 +167,7 @@
       }
 
       .btn {
-        padding: 10px 0;
+        padding: 8px 0;
         line-height: 1;
       }
     }
@@ -205,12 +205,10 @@
         padding-left: 10px;
 
         .btn-icon {
-          margin-right: clamp(0.2em, rem(13), 15px);
+          margin-right: clamp(0.2em, rem(12), 15px);
           width: 100%;
-          height: 10px;
+          height: 9px;
           max-width: 18px;
-          fill: none;
-          stroke: var(--color-gray-300);
           transform: translateY(1px);
         }
       }
@@ -220,12 +218,11 @@
         padding-left: 12px;
 
         .btn-icon {
-          margin-right: clamp(0.2em, rem(15), 15px);
+          margin-right: clamp(0.2em, rem(14), 15px);
           width: 100%;
-          height: 14px;
+          height: 15px;
           max-width: 14px;
-          fill: none;
-          stroke: var(--color-gray-300);
+          transform: translateY(-1px);
         }
       }
     }
@@ -253,10 +250,8 @@
     .tabs-icon {
       margin-left: clamp(0.2em, 0.8125rem, 15px);
       width: 100%;
-      height: 10px;
+      height: auto;
       max-width: 18px;
-      fill: none;
-      stroke: var(--color-gray-300);
       transform: translateY(1px);
     }
   }
